...
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_search">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
    <TextView
        android:id="@+id/textView_label_website"
...
        app:layout_constraintBottom_toTopOf="@+id/imageView_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <TextView
        android:id="@+id/materialButton_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="16dp"
        android:text="@string/search"
        android:textColor="@android:color/black"
...
